--- a/class_3/index.html
+++ b/class_3/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Class 03</title>
 </head>
 <body>
-    <audio controls>
-  <source src="../behtreen_dost.mp3" type="audio/mpeg">
-</audio>
-
+ 
 </body>
 </html>
