--- a/class_3/index.html
+++ b/class_3/index.html
@@ -6,6 +6,53 @@
     <title>Class 03</title>
 </head>
 <body>
- 
+   <h1>Form</h1>
+   <form action="#">
+    <label for="name">Name:</label>
+    <input type="text" placeholder="Name">
+    <br>
+    <label for="email">Email:</label>
+    <input type="email" placeholder="Email">
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" placeholder="Password">
+    <br>
+    <h3>CheckBox</h3>
+    <p>Select it</p>
+    <label for="">
+        <input type="checkbox" name="lang" id="lang" value="HTML">HTML
+    </label>
+     <label for="">
+        <input type="checkbox" name="lang" id="lang" value="JavaScript">JavaScript
+    </label>
+     <label for="">
+        <input type="checkbox" name="lang" id="lang" value="CSS">CSS
+       </label> 
+        <h3>Radio Button</h3>
+        <p>select it</p>
+    <label for="">
+        <input type="radio" name="lang" id="lang" value="HTML">HTML
+    </label>
+     <label for="">
+        <input type="radio" name="lang" id="lang" value="JavaScript">JavaScript
+    </label>
+     <label for="">
+        <input type="radio" name="lang" id="lang" value="CSS">CSS
+        </label>
+       <br>
+       <select name="city" id="city">
+        <option value="Karachi">Karachi</option>
+        <option value="Multan">Multan</option>
+       </select>
+       <br>
+    <input type="submit">
+   </form>
+   <h2>Video tag</h2>
+   <video src="./value_of_time_1scene.mp4" width="400px" controls></video>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/6mbwJ2xhgzM?si=1t
+   YHf_U_b-21Ctg-" title="YouTube video player" frameborder="0" allow="accelerometer; 
+   autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   
 </body>
 </html>
