--- a/class_3/index.html
+++ b/class_3/index.html
@@ -53,6 +53,15 @@
    YHf_U_b-21Ctg-" title="YouTube video player" frameborder="0" allow="accelerometer; 
    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-   
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.8367162138857!2d67
+   .07888467618767!3d24.90355067790123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb
+   33f27efffffff%3A0xf453ab81308b9df!2s18%2C%20Block%2016%20Gulshan-e-Iqbal%2C%20Karachi%2C%20
+   Pakistan!5e0!3m2!1sen!2s!4v1759156321329!5m2!1sen!2s" width="600" height="450"
+    style="border:0;" allowfullscreen="" loading="lazy"
+     referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+   <audio controls>
+    <source src="./behtreen_dost.mp3" type="audio/mpeg">
+   </audio>
 </body>
 </html>
